updated nvm to match render

--- a/src/services/email/templates/auth.template.html
+++ b/src/services/email/templates/auth.template.html
@@ -31,7 +31,7 @@ body, table, td, a, p {font-family: 'Montserrat', sans-serif !important;}
       vertical-align: middle;
     ">
       <img
-        src="https://i.imgur.com/8BUB3lT.png"
+        src=""
         style="
           box-sizing: border-box;
           margin: 0;
@@ -51,7 +51,7 @@ body, table, td, a, p {font-family: 'Montserrat', sans-serif !important;}
         vertical-align: middle;
         color: #fff;
       ">
-        Selfieboost
+        Notenook
       </p>
     </td>
   </tr>
